# Private

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml  test.yml
config/: sources.yaml
docs/superpowers/plans/: 2026-07-18-dingtalk-ai-daily.md  2026-07-20-daily-content-fallback.md  2026-07-20-daily-delivery-reliability.md  2026-07-20-morning-schedule.md  2026-07-22-midnight-schedule.md  2026-07-22-model-failure-delivery.md
docs/superpowers/specs/: 2026-07-18-dingtalk-ai-daily-design.md  2026-07-20-daily-content-fallback-design.md  2026-07-20-daily-delivery-reliability-design.md  2026-07-22-midnight-schedule-design.md  2026-07-22-model-failure-delivery-design.md
src/ai_daily/: __init__.py  analyzer.py  app.py  cli.py  config.py  delivery_state.py  dingtalk.py  filtering.py  models.py  selection.py  sources.py  state.py
tests/: test_analyzer.py  test_app.py  test_config.py  test_delivery_state.py  test_dingtalk.py  test_filtering.py  test_selection.py  test_sources.py  test_state.py  test_workflows.py
tests/fixtures/: arxiv.xml  rss.xml
